新增table to struct
